@@ -8,7 +8,7 @@
 \usage{
 \method{marginal_effects}{brmsfit}(x, effects = NULL, conditions = NULL,
   re_formula = NA, robust = TRUE, probs = c(0.025, 0.975),
-  method = c("fitted", "predict"), ...)
+  method = c("fitted", "predict"), contour = FALSE, resolution = 100, ...)
 
 marginal_effects(x, ...)
 
@@ -17,7 +17,7 @@ marginal_effects(x, ...)
   plot = TRUE, ...)
 }
 \arguments{
-\item{x}{An object usually of class \code{brmsfit}}
+\item{x}{An object usually of class \code{brmsfit}.}
 
 \item{effects}{An optional character vector naming effects
 (main effects or interactions) for which to compute marginal plots.
@@ -44,6 +44,16 @@ intervals (defaults to 2.5 and 97.5 percent quantiles)}
 \item{method}{Either \code{"fitted"} or \code{"predict"}. 
 If \code{"fitted"}, plot marginal predictions of the regression curve. 
 If \code{"predict"}, plot marginal predictions of the responses.}
+
+\item{contour}{Logical; Indicates whether interactions should be 
+visualized with a contour plot. Defaults to \code{FALSE}.}
+
+\item{resolution}{Number of support points used to generate 
+the plots. Higher resolution leads to smoother plots. 
+Defaults to \code{100}. If \code{contour} is \code{TRUE},
+this implies \code{10000} support points for interaction terms,
+so it might be necessary to reduce \code{resolution} 
+when only few RAM is available.}
 
 \item{...}{Currently ignored.}
 
@@ -77,14 +87,21 @@ Defaults to \code{TRUE}.}
 }
 \value{
 An object of class \code{brmsMarginalEffects}, which is a named list
-  with one element per effect containing all information required to generate
-  marginal effects plots. The corresponding \code{plot} method returns a named 
+  with one data.frame per effect containing all information required 
+  to generate marginal effects plots. Among others, these data.frames
+  contain some special variables, namely \code{estimate__} (predicted values
+  of the response), \code{se__} (standard error of the predicted response),
+  \code{lower__} and \code{upper__} (lower and upper bounds of the uncertainty
+  interval of the response), as well as \code{cond__} (used in faceting when 
+  \code{conditions} contains multiple rows).
+  
+  The corresponding \code{plot} method returns a named 
   list of \code{\link[ggplot2:ggplot]{ggplot}} objects, which can be further 
   customized using the \pkg{ggplot2} package.
 }
 \description{
 Display marginal effects of one or more numeric and/or categorical 
-predictors including interaction effects of order 2.
+predictors including two-way interaction effects.
 }
 \details{
 \code{NA} values within factors in \code{conditions}, 
